syntax = "proto3";

option csharp_namespace = "DeliveryService.Backend.Customer.Grpc";

package backendgrpcservice;

service CustomerBackend {
  rpc MakeOrderRequest (InitialOrderRequest) returns (GrpcApiReply);
  rpc MakePaymentStart (InitialOrderRequest) returns (GrpcApiReply);
  rpc MakePaymentRespond (DeliveryOrderRequest) returns (GrpcApiReply);
  rpc PreprocessOrderRedirect (DeliveryOrderRequest) returns (GrpcApiReply);
}

message InitialOrderRequest {
  string userUid = 1;
  string login = 2;
  string phoneNumber = 3;
  string city = 4;
  string address = 5;
  repeated int64 productIds = 6;
  string paymentType = 7;
  string paymentMethod = 8;
  string paymentAmount = 9;
}
message DeliveryOrderRequest {
  int64 id = 1;
  string uid = 2;
  string name = 3;
  string description = 4;
  int32 businessEntityStatus = 5;
}
message GrpcApiReply {
  string message = 1;
}
